--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -76,6 +76,11 @@ h2 {
 	text-align: center;
 	padding: 20px;
 }
+
+.formu{
+	padding: 4px;
+	margin: 10px;
+}
 /*
 *****************Formatação do menu
 */
